--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "autoprefixer": "10.4.16",
     "framer-motion": "^10.16.12",
     "next": "14.0.3",
+    "next-cloudinary": "^5.10.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
+    "react-player": "^2.13.0",
     "react-responsive": "^9.0.2",
     "react-scroll": "^1.9.0",
     "tailwindcss": "3.3.5"
